# hr_job_posting_creation

./: README.md  pyproject.toml  terminal_chat.py
src/hr_job_creation/: main.py
src/hr_job_creation/crews/hr_crew/: hr_crew.py
src/hr_job_creation/crews/hr_crew/config/: agents.yaml  tasks.yaml
