[project]
name = "hr_job_creation"
version = "0.1.0"
description = "hr_job_creation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "colorama>=0.4.6",
    "crewai[tools]==1.9.3",
    "firecrawl-py>=4.15.0",
    "requests>=2.32.5",
]

[project.scripts]
kickoff = "hr_job_creation.main:kickoff"
run_crew = "hr_job_creation.main:kickoff"
plot = "hr_job_creation.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
